# point_ruster

./: AGENTS.md  Cargo.toml  README.md  README.txt
.github/workflows/: rust.yml
ply_editor/: AGENTS.md  Cargo.toml  README.txt
ply_editor/.github/workflows/: rust.yml
ply_editor/src/: main.rs
ply_editor/src/app/: app_state.rs  commands.rs  input.rs  run.rs
ply_editor/src/data/: geometry.rs  scene.rs  selection.rs
ply_editor/src/io/: obj_export.rs  ply_loader.rs
ply_editor/src/tools/: mod.rs  tool_select.rs
ply_editor/src/ui/: inspector.rs
ply_editor/src/viewer/: picking.rs  renderer.rs
src/: main.rs
src/app/: history.rs  input.rs  mod.rs  run.rs
src/data/: mod.rs  point_cloud.rs
src/io/: mod.rs  obj_export.rs
src/math/: basis.rs  mod.rs  pca.rs
src/tools/: plane_fit.rs  tool_fit_plane.rs  tool_select.rs  tool_trait.rs  triangulate_plane.rs
src/ui/: inspector.rs  mod.rs  panels.rs  scene_panel.rs  toolbar.rs
src/viewer/: camera.rs  mod.rs  primitives.rs  renderer.rs
